# puutools

./: .gitignore  CMakeLists.txt  README.md  install.sh
.github/workflows/: cmake.yml
cmake/: cmake_build_debug.sh  cmake_build_release.sh  cmake_clean.sh  cmake_install.sh  cmake_install_debug.sh  cmake_install_release.sh  make.sh  make_clean.sh  make_debug.sh
cmake_find_module/: FindPuuTools.cmake
doc/: backup_vs_live_tracking.pptx  basic_algorithm.pptx  ~$backup_vs_live_tracking.pptx
example/: CMakeLists.txt  Individual.cpp  Individual.h  README.md  Simulation.h  puu_enums.h  puu_node.cpp  puu_node.h  puu_tree.cpp  puu_tree.h  puutools_example.cpp  puutools_wright_fisher_example.cpp
example/cmake/: make.sh  make_clean.sh  make_debug.sh  make_release.sh
example/output/: .Rhistory  MRCA_age_N200.txt  plot_MRCA_age.R  plot_results.R
example/src/: Individual.cpp  Individual.h  Prng.cpp  Prng.h  Simulation.cpp  Simulation.h  puutools_example.cpp
logo/: puutools_logo.pptx
pic/: backup_vs_live_tracking.pptx  basic_algorithm.pptx
puutools/: puutools.cpp  puutools.h
puutools/depr/: puutools.cpp  puutools.h
src/: puutools.cpp
src/example/: Prng.cpp  Prng.h  puutools_example1.cpp  run_simulation.cpp
src/example/output/: .Rhistory  plot_MRCA_age.R
src/include/: puu_enums.h  puu_node.h  puu_tree.h  puutools.h
src/lib/: puu_node.cpp  puu_tree.cpp  puutools.cpp
src/puutools/: puutools.cpp
src/tests/: puu_node_unitary_tests.cpp  puu_tree_unitary_tests.cpp
